# claim_arbitrum

./: .env  Cargo.toml  LICENSE  README.md
src/: contract_abi.json  main.rs  optional.rs
